@@ -54,3 +54,12 @@ bool CostEstimate::isValid() const {
   // a value of < 0 will mean that the cost estimation was not performed yet
   return estimatedCost >= 0.0;
 }
+
+void CostEstimate::saveEstimatedNrItems() {
+  _outerSubqueryEstimatedNrItems.push(estimatedNrItems);
+}
+
+void CostEstimate::restoreEstimatedNrItems() {
+  estimatedNrItems = _outerSubqueryEstimatedNrItems.top();
+  _outerSubqueryEstimatedNrItems.pop();
+}
