@@ -1,5 +1,5 @@
 /*jshint globalstrict:false, strict:false, maxlen: 500 */
-/*global assertEqual, AQL_EXPLAIN */
+/*global AQL_EXPLAIN */
 
 ////////////////////////////////////////////////////////////////////////////////
 /// @brief tests for cost estimation
@@ -28,9 +28,10 @@
 /// @author Copyright 2012, triAGENS GmbH, Cologne, Germany
 ////////////////////////////////////////////////////////////////////////////////
 
-var jsunity = require("jsunity");
-var db = require("@arangodb").db;
-var helper = require("@arangodb/aql-helper");
+const jsunity = require("jsunity");
+const {assertEqual} = jsunity.jsUnity.assertions;
+const db = require("@arangodb").db;
+const helper = require("@arangodb/aql-helper");
 
 ////////////////////////////////////////////////////////////////////////////////
 /// @brief test suite
@@ -200,7 +201,87 @@ function optimizerCostsTestSuite () {
       // find the enumeratelistnode in the subquery
       node = helper.findExecutionNodes(node.subquery, "EnumerateListNode")[0];
       assertEqual(4, node.estimatedNrItems);
-    }
+    },
+
+////////////////////////////////////////////////////////////////////////////////
+/// @brief test that spliced subqueries restore the number of lines at their end
+///        node correctly.
+////////////////////////////////////////////////////////////////////////////////
+
+    testSplicedSubquery : function () {
+      const query = `
+        FOR i IN 1..3
+          LET sq = (
+            FOR k IN 1..5
+              RETURN {i, k}
+          )
+          RETURN sq
+      `;
+
+      const explain = AQL_EXPLAIN(query);
+      const nodes = explain.plan.nodes;
+      const nodeTypes = nodes.map(n => n.type);
+
+      // Check the rough outline first for a better overview in case of a failure
+      // of the plan.
+      assertEqual(["SingletonNode", "CalculationNode", "EnumerateListNode", "SubqueryStartNode", "CalculationNode", "EnumerateListNode", "CalculationNode", "SubqueryEndNode", "ReturnNode"],
+nodeTypes);
+
+      let node, prevNode;
+      // SingletonNode
+      node = nodes[0];
+      assertEqual("SingletonNode", node.type);
+      assertEqual(1, node.estimatedNrItems);
+      assertEqual(1, node.estimatedCost);
+      // CalculationNode
+      prevNode = node;
+      node = nodes[1];
+      assertEqual("CalculationNode", node.type);
+      assertEqual(1, node.estimatedNrItems);
+      assertEqual(1 + prevNode.estimatedCost, node.estimatedCost);
+      // EnumerateListNode
+      prevNode = node;
+      node = nodes[2];
+      assertEqual("EnumerateListNode", node.type);
+      assertEqual(3, node.estimatedNrItems);
+      assertEqual(3 + prevNode.estimatedCost, node.estimatedCost);
+      // SubqueryStartNode
+      prevNode = node;
+      node = nodes[3];
+      assertEqual("SubqueryStartNode", node.type);
+      assertEqual(3, node.estimatedNrItems);
+      assertEqual(3 + prevNode.estimatedCost, node.estimatedCost);
+      // CalculationNode
+      prevNode = node;
+      node = nodes[4];
+      assertEqual("CalculationNode", node.type);
+      assertEqual(3, node.estimatedNrItems);
+      assertEqual(3 + prevNode.estimatedCost, node.estimatedCost);
+      // EnumerateListNode
+      prevNode = node;
+      node = nodes[5];
+      assertEqual("EnumerateListNode", node.type);
+      assertEqual(15, node.estimatedNrItems);
+      assertEqual(15 + prevNode.estimatedCost, node.estimatedCost);
+      // CalculationNode
+      prevNode = node;
+      node = nodes[6];
+      assertEqual("CalculationNode", node.type);
+      assertEqual(15, node.estimatedNrItems);
+      assertEqual(15 + prevNode.estimatedCost, node.estimatedCost);
+      // SubqueryEndNode
+      prevNode = node;
+      node = nodes[7];
+      assertEqual("SubqueryEndNode", node.type);
+      assertEqual(3, node.estimatedNrItems);
+      assertEqual(3 + prevNode.estimatedCost, node.estimatedCost);
+      // ReturnNode
+      prevNode = node;
+      node = nodes[8];
+      assertEqual("ReturnNode", node.type);
+      assertEqual(3, node.estimatedNrItems);
+      assertEqual(3 + prevNode.estimatedCost, node.estimatedCost);
+    },
 
   };
 }
